--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -1,6 +1,8 @@
 .navbar_div {
     display: flex;
     justify-content: space-around;
+    align-items: center;
     background-color:grey;
     height: 100px;
+    padding-bottom: 10px;
 }
