--- a/src/components/Titulo/titulo.css
+++ b/src/components/Titulo/titulo.css
@@ -1,6 +1,7 @@
 .tituloPrincipal {
     text-align: center;
-    font-size: 30px;
+    font-size: 60px;
     font-family: Arial, Helvetica, sans-serif;
+    margin-top: 60px;
     margin-bottom: 100px;
 }
